--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
-
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "npx --no-install commitlint --edit '$1'"
+    }
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^9.4.0",
