--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "npx --no-install commitlint --edit '$1'"
-    }
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^9.4.0",
