--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write src/",
     "test": "",
     "prepare": "husky",
-    "commitlint": "commitlint --edit"
+    "commitlint": "commitlint --edit",
+    "cz": "czg",
+    "commit": "git add -A && czg && git push"
+  },
+  "lint-staged": {
+    "*.{js,tsx}": "eslint"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^9.4.0",
@@ -35,6 +41,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jotai": "^2.10.3",
+    "lint-staged": "^15.2.10",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
@@ -53,10 +60,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "czg": "^1.11.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "husky": "9.1.6",
+    "husky": "^9.1.7",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
