--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky",
     "commitlint": "commitlint --edit",
     "cz": "czg",
-    "commit": "git add -A && czg && git push"
+    "commit": "git add -A && czg && git push",
+    "release": "release-it"
   },
   "lint-staged": {
     "*.{js,tsx}": "eslint"
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
+    "@release-it/conventional-changelog": "^9.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -66,6 +68,7 @@
     "husky": "^9.1.7",
     "postcss": "^8",
     "prettier": "^3.4.2",
+    "release-it": "^17.10.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
