--- a/.release-it.json
+++ b/.release-it.json
@@ -12,10 +12,6 @@
       "after:bump": "echo 更新版本成功"
     },
     "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "angular",
-        "infile": "CHANGELOG.md"
-      }
+      "@release-it/conventional-changelog": {}
     }
   }
-  
