--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "commitlint": "commitlint --edit",
     "cz": "czg",
     "commit": "git add -A && czg && git push",
-    "release": "release-it"
+    "release": "release-it --changelog"
   },
   "lint-staged": {
     "*.{js,tsx}": "eslint"
