--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "release-it": "^17.6.0",
+    "@release-it/conventional-changelog": "^8.0.2"
   }
 }
