--- a/.release-it.json
+++ b/.release-it.json
@@ -1,21 +1,8 @@
 {
-    "github": {
-      "release": true
-    },
-    "git": {
-      "commitMessage": "chore: v${version}"
-    },
-    "npm": {
+  "git": {
+      "requireUpstream": false
+  },
+  "npm": {
       "publish": false
-    },
-    "hooks": {
-      "after:bump": "echo 更新版本成功"
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "angular",
-        "infile": "CHANGELOG.md"
-      }
-    }
   }
-  
+}
