--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -16,18 +16,10 @@ jobs:
       - name: "create env file"
         run: |
           touch .env
-          echo ALC_ACCESS_KEY=${{ secrets.ALC_ACCESS_KEY }} >> .env
-          echo ALC_SECRET_KEY=${{ secrets.ALC_SECRET_KEY }} >> .env
-          echo GITEE_CID=${{ secrets.GITEE_CID }} >> .env
-          echo GITEE_SECRET=${{ secrets.GITEE_SECRET }} >> .env
+          echo NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }} >> .env
+          echo API_BASE_URL=${{ secrets.API_BASE_URL }} >> .env
+          echo DASHSCOPE_API_KEY=${{ secrets.DASHSCOPE_API_KEY }} >> .env
           echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
-          echo MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }} >> .env
-          echo MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }} >> .env
-          echo MONGO_DB_USERNAME=${{ secrets.MONGO_DB_USERNAME }} >> .env
-          echo MONGO_DB_PASSWORD=${{ secrets.MONGO_DB_PASSWORD }} >> .env
-          echo REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} >> .env
-          echo REDIS_HOST=${{ secrets.REDIS_HOST }} >> .env
-          echo PING_ENV=${{ secrets.PING_ENV }} >> .env
       # 使用阿里云ACR 完成 docker login
       - name: Login to Aliyun Container Registry (ACR)
         uses: aliyun/acr-login@v1
@@ -38,9 +30,9 @@ jobs:
           password: "${{ secrets.ACR_PASSWORD }}"
       #使用正确的阿里云 tag 进行 docker build
       - name: Build image for docker
-        run: docker build --tag "crpi-yacuoj1e11qkasck.cn-beijing.personal.cr.aliyuncs.com/jiaozenghui/p-test:${{github.ref_name}}" .
+        run: docker build --tag "crpi-yacuoj1e11qkasck.cn-beijing.personal.cr.aliyuncs.com/jiaozenghui/next-blog:${{github.ref_name}}" .
       - name: Psuh Image to ACR
-        run: docker push crpi-yacuoj1e11qkasck.cn-beijing.personal.cr.aliyuncs.com/jiaozenghui/p-test:${{github.ref_name}}
+        run: docker push crpi-yacuoj1e11qkasck.cn-beijing.personal.cr.aliyuncs.com/jiaozenghui/next-blog:${{github.ref_name}}
       # 测试查找并替换
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@v2
@@ -51,18 +43,17 @@ jobs:
       # 拷贝必须文件到一个文件夹，包括.env， docker-compose-online.yml， mongo-entrypoint
       - name: "copy necessary files in to one folder"
         run: |
-          mkdir p-test-back-server
-          cp .env docker-compose-online.yml p-test-back-server
-          cp -r mongo-entrypoint p-test-back-server
-          ls -a p-test-back-server
+          mkdir next-blog
+          cp .env docker-compose-online.yml next-blog
+          ls -a next-blog
       # 通过 scp 拷贝必须文件到服务器
-      - name: "copy p-test-back-server folder via scp"
+      - name: "copy next-blog folder via scp"
         uses: appleboy/scp-action@master
         with:
           host: ${{secrets.HOST}}
           username: ${{secrets.SSH_USER}}
           password: ${{secrets.SSH_PWD}}
-          source: "p-test-back-server"
+          source: "next-blog"
           target: "~"
       # 通过 SSH 登录然后重启服务器
       - name: executing ssh and restart docker
@@ -77,7 +68,7 @@ jobs:
           # 清理工作
           script: |
             docker login --username ${{secrets.ACR_USERNAME}} --password=${{secrets.ACR_PASSWORD}} crpi-yacuoj1e11qkasck.cn-beijing.personal.cr.aliyuncs.com
-            cd ~/p-test-back-server/
+            cd ~/next-blog/
             docker-compose -f docker-compose-online.yml down
             docker-compose -f docker-compose-online.yml up -d
             rm -rf .env
