--- a/docker-compose-online.yml
+++ b/docker-compose-online.yml
@@ -4,11 +4,12 @@ services:
     image: crpi-yacuoj1e11qkasck.cn-beijing.personal.cr.aliyuncs.com/jiaozenghui/next-blog:{{tag}}
     container_name: next-blog
     networks:
-      - blog_bridge_network
+      - blog_net
     ports:
       - 8000:3000
     env_file:
       - .env
 networks:
-  blog_bridge_network:
+  blog_net:
+    name: blog_bridge_network
     external: true
