--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
+    "@release-it/conventional-changelog": "^8.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -67,9 +68,8 @@
     "husky": "^9.1.7",
     "postcss": "^8",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
     "release-it": "^17.6.0",
-    "@release-it/conventional-changelog": "^8.0.2"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
